add yolo semisupervised learning intro

--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -1,29 +1,32 @@
 <app-slideshow-section>
   <ng-template>
     <div class="slide-content">
-<div class="split-slide">
-      <div class="text-column">
-        <h1>Introduction</h1>
-        <p>
-          In all modern manufacturing processes, it is essential to observe and validate the condition of components at
-          the output stage. This validation not only ensures the integrity of the physical elements, but also enables
-          the extraction of valuable contextual information about the entire production chain—ranging from raw materials
-          to the influence of external factors such as personnel and machinery.
-        </p>
-        <p>
-          Within the framework of Industry 4.0, this necessity translates into the demand for enhanced quality control
-          techniques capable of meeting increasingly stringent standards. In this context, and driven by rapid
-          advancements in processing hardware, computer vision has emerged as a powerful and viable solution.
-        </p>
-        <p>
-          Computer vision refers to a set of techniques for acquiring, processing, analyzing, and interpreting images of
-          the real world in order to generate discrete information that can be processed by digital systems.
-        </p>
+      <div class="split-slide">
+        <div class="text-column">
+          <h1>Introduction</h1>
+          <p>
+            In all modern manufacturing processes, it is essential to observe and validate the condition of components
+            at
+            the output stage. This validation not only ensures the integrity of the physical elements, but also enables
+            the extraction of valuable contextual information about the entire production chain—ranging from raw
+            materials
+            to the influence of external factors such as personnel and machinery.
+          </p>
+          <p>
+            Within the framework of Industry 4.0, this necessity translates into the demand for enhanced quality control
+            techniques capable of meeting increasingly stringent standards. In this context, and driven by rapid
+            advancements in processing hardware, computer vision has emerged as a powerful and viable solution.
+          </p>
+          <p>
+            Computer vision refers to a set of techniques for acquiring, processing, analyzing, and interpreting images
+            of
+            the real world in order to generate discrete information that can be processed by digital systems.
+          </p>
+        </div>
+        <div class="image-column">
+          <img src="assets/images/intro_industry40.png" alt="Model Diagram" />
+        </div>
       </div>
-      <div class="image-column">
-        <img src="assets/images/intro_industry40.png" alt="Model Diagram" />
-      </div>
-    </div>
     </div>
   </ng-template>
 
