--- a/src/app/pages/yolo-cls/yolo-cls.component.scss
+++ b/src/app/pages/yolo-cls/yolo-cls.component.scss
@@ -3,13 +3,33 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
     width: 75%;
+
+    img {
+        width: 100%;
+        height: auto;
+        border-radius: 24px;
+        object-fit: cover;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
 }
 
-.image-grid img {
-    width: 100%;
-    height: auto;
+.image-grid_2 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 64px;
+    width: 80%;
+    background-color: #fff;
+    padding: 32px;
     border-radius: 24px;
-    object-fit: cover;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-}
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); 
 
+
+    img {
+        // font-family: 'Courier New', Courier, monospace;
+        width: 100%;
+        height: auto;
+        // border-radius: 24px;
+        object-fit: cover;
+        // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+}
