add yolo segmentation models. change page architecture, wrapping yolo and keras frameworks.

--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -58,7 +58,7 @@
       </div>
       <div class="next-btn-div">
         <button class="next-btn" (click)="goNext()">
-          YOLO Classification <span class="arrow">→</span>
+          Dataset <span class="arrow">→</span>
         </button>
       </div>
     </div>
