--- a/src/app/pages/dataset/dataset.component.html
+++ b/src/app/pages/dataset/dataset.component.html
@@ -66,7 +66,7 @@
             </div>
             <div class="next-btn-div">
                 <button class="next-btn" (click)="goNext()">
-                    YOLOv8 Classification <span class="arrow">→</span>
+                    YOLO Framework <span class="arrow">→</span>
                 </button>
             </div>
         </div>
