--- a/src/app/pages/slide-main-styles.scss
+++ b/src/app/pages/slide-main-styles.scss
@@ -13,6 +13,7 @@
     margin: 1rem 0;
     color: #2c3e50;
   }
+
 }
 
 .slide-content {
@@ -42,6 +43,14 @@
         font-size: 2.5rem;
         margin-bottom: 1rem;
         color: c.$cv-primary;
+      }
+
+      h2 {
+        font-size: 1.2rem;
+        font-weight: 100;
+        margin-top: -6px;
+        font-style: italic;
+        color: c.$cv-text-light;
       }
 
       p {
@@ -81,19 +90,19 @@
       }
 
 
-      .image-wrapper{
+      .image-wrapper {
         margin-top: 16px;
         display: flex;
         width: center;
         justify-content: center;
-          align-items: center;
+        align-items: center;
 
         img {
-        max-width: 75%;
-        max-height: 80%;
-        object-fit: contain;
-        border-radius: 1rem;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+          max-width: 75%;
+          max-height: 80%;
+          object-fit: contain;
+          border-radius: 1rem;
+          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
         }
       }
 
@@ -136,16 +145,16 @@
         border-radius: 18px;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
         //  overflow-x: auto;
-         box-sizing: border-box;
-         padding: 10px;
-         background-color: #fff;
+        box-sizing: border-box;
+        padding: 10px;
+        background-color: #fff;
       }
 
-      .table-wrapper{
+      .table-wrapper {
         width: 90%;
         border-radius: 18px;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-         overflow-x: auto;
+        overflow-x: auto;
       }
     }
   }
