--- a/src/app/pages/yolo-cls/yolo-cls.component.scss
+++ b/src/app/pages/yolo-cls/yolo-cls.component.scss
@@ -21,12 +21,64 @@
     background-color: #fff;
     padding: 32px;
     border-radius: 24px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 
 
     img {
         // font-family: 'Courier New', Courier, monospace;
         width: 100%;
+        height: auto;
+        // border-radius: 24px;
+        object-fit: cover;
+        // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+}
+
+.image-grid_3 {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+    width: 80%;
+    background-color: #fff;
+    padding: 32px;
+    border-radius: 24px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+
+
+    img {
+        // font-family: 'Courier New', Courier, monospace;
+        width: 100%;
+        height: auto;
+        // border-radius: 24px;
+        object-fit: cover;
+        // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+}
+
+.seg-mosaic {
+
+    img {
+        width: 40%;
+    }
+}
+
+.image-grid_4 {
+    // margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 32px;
+    column-gap: 16px;
+    // width: fit-content;
+    background-color: #fff;
+    padding: 32px;
+    border-radius: 24px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+
+
+    img {
+        // font-family: 'Courier New', Courier, monospace;
+        width:80%;
         height: auto;
         // border-radius: 24px;
         object-fit: cover;
