--- a/src/app/pages/yolo-cls/yolo-cls.component.html
+++ b/src/app/pages/yolo-cls/yolo-cls.component.html
@@ -1,5 +1,5 @@
 <app-slideshow-section>
-    <ng-template>
+  <!-- <ng-template>
         <div class="slide-content">
             <div class="split-slide">
                 <div class="text-column">
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-    </ng-template> 
+    </ng-template>  -->
 
   <ng-template>
     <div class="slide-content">
@@ -54,7 +54,9 @@
         </div>
         <div class="result-column">
           <div class="chart-wrapper">
-            <p-chart #myChart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
+            <div class="zoom-reset-wrapper"> <button (click)="resetZoomCls()">Reset zoom</button>
+            </div>
+            <p-chart #clsChart type="line" [data]="chartData" [options]="chartOptions"></p-chart>
           </div>
           <div class="table-wrapper">
             <p-table [value]="users" responsiveLayout="scroll">
@@ -91,7 +93,7 @@
         </div>
       </div>
     </div>
-  </ng-template> 
+  </ng-template>
 
 
 
@@ -120,9 +122,9 @@
         </div>
       </div>
     </div>
-  </ng-template> 
+  </ng-template>
 
-   <ng-template>
+  <ng-template>
     <div class="slide-content">
       <div class="split-slide">
         <div class="text-column">
@@ -143,7 +145,8 @@
 
         <div class="result-column">
           <div class="chart-wrapper">
-            <p-chart #myChart type="line" [data]="chartDataSeg1" [options]="chartOptionsSeg1"></p-chart>
+            <div class="zoom-reset-wrapper"> <button (click)="resetZoomSeg1()">Reset zoom</button></div>
+            <p-chart #segChart1 type="line" [data]="chartDataSeg1" [options]="chartOptionsSeg1"></p-chart>
           </div>
           <div class="table-wrapper">
             <p-table [value]="seg1" responsiveLayout="scroll">
@@ -167,7 +170,7 @@
         </div>
       </div>
     </div>
-  </ng-template> 
+  </ng-template>
 
 
   <ng-template>
@@ -177,33 +180,47 @@
           <h1>YOLOv8 Segmentation Results</h1>
           <h2>Second Segmenter</h2>
           <p>
-            The second segmentation model, trained on a pseudo-labeled dataset within a semi-supervised learning framework, demonstrates a slight improvement over the baseline model trained under a purely supervised paradigm. This approach enhances the model’s generalization capabilities, leading to more accurate and robust segmentation performance compared to the initial supervised counterpart.
+            The second segmentation model, trained on a pseudo-labeled dataset within a semi-supervised learning
+            framework, demonstrates a slight improvement over the baseline model trained under a purely supervised
+            paradigm. This approach enhances the model’s generalization capabilities, leading to more accurate and
+            robust segmentation performance compared to the initial supervised counterpart.
           </p>
           <div class="grid-wrapper">
             <div class="image-grid_4">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-0-0.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-0-1.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-0-2.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-0-3.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-1-0.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-1-1.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-1-2.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-1-3.png" alt="Segmentation Augmentation Mosaic">
-            <img src="assets/images/segmentation/mosaic/seg_augmentation-2-0.png" alt="Segmentation Augmentation Mosaic">
-             <img src="assets/images/segmentation/mosaic/seg_augmentation-2-1.png" alt="Segmentation Augmentation Mosaic">
-           <!-- <img src="assets/images/segmentation/mosaic/seg_augmentation-2-2.png" alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-0-0.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-0-1.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-0-2.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-0-3.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-1-0.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-1-1.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-1-2.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-1-3.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-2-0.png"
+                alt="Segmentation Augmentation Mosaic">
+              <img src="assets/images/segmentation/mosaic/seg_augmentation-2-1.png"
+                alt="Segmentation Augmentation Mosaic">
+              <!-- <img src="assets/images/segmentation/mosaic/seg_augmentation-2-2.png" alt="Segmentation Augmentation Mosaic">
             <img src="assets/images/segmentation/mosaic/seg_augmentation-2-3.png" alt="Segmentation Augmentation Mosaic">
             <img src="assets/images/segmentation/mosaic/seg_augmentation-3-0.png" alt="Segmentation Augmentation Mosaic">
             <img src="assets/images/segmentation/mosaic/seg_augmentation-3-1.png" alt="Segmentation Augmentation Mosaic">
             <img src="assets/images/segmentation/mosaic/seg_augmentation-3-2.png" alt="Segmentation Augmentation Mosaic"> -->
-            <!-- <img src="assets/images/segmentation/mosaic/seg_augmentation-3-3.png" alt="Segmentation Augmentation Mosaic"> -->
+              <!-- <img src="assets/images/segmentation/mosaic/seg_augmentation-3-3.png" alt="Segmentation Augmentation Mosaic"> -->
+            </div>
           </div>
-        </div>
         </div>
 
         <div class="result-column">
           <div class="chart-wrapper">
-            <p-chart #myChart type="line" [data]="chartDataSeg1" [options]="chartOptionsSeg1"></p-chart>
+            <div class="zoom-reset-wrapper"> <button (click)="resetZoomSeg2()">Reset zoom</button></div>
+            <p-chart #segChart2 type="line" [data]="chartDataSeg1" [options]="chartOptionsSeg1"></p-chart>
           </div>
           <div class="table-wrapper">
             <p-table [value]="seg1" responsiveLayout="scroll">
@@ -228,9 +245,9 @@
       </div>
       <div class="next-btn-div">
         <button class="next-btn" (click)="goNext()">
-            Keras Framework <span class="arrow">→</span>
+          Keras Framework <span class="arrow">→</span>
         </button>
-    </div>
+      </div>
     </div>
   </ng-template>
 
