--- a/src/styles.scss
+++ b/src/styles.scss
@@ -590,17 +590,21 @@ body {
   /* Make active number circle blue background */
   --p-steps-item-number-active-background: #E3E2DA;   /* blue-600 */
   /* Make active number text white (or any contrast color) */
-  --p-steps-item-number-active-color: #004254;
+  --p-steps-item-number-active-color: #3730a3;
+  --p-steps-item-number-color: #334155;
   /* Optional: change active border color */
    --p-steps-item-number-active-border-color: #E3E2DA;
 
   --p-steps-item-number-border-color: #E3E2DA;
   /* Change active label color */
-  --p-steps-item-label-active-color: #004254;
+  --p-steps-item-label-active-color: #3730a3;
+  --p-steps-item-label-color: #334155;
   /* Optionally, make the separator blue as well */
   --p-steps-separator-background: #E3E2DA;
   --p-steps-item-number-font-size: 0.95rem;
-  --p-steps-item-number-font-weight: bold;
+  --p-steps-item-label-font-weight: 600;
+  --p-steps-item-number-font-weight: 600;
+
 }
 
 .p-steps-item-label {
