--- a/src/app/pages/keras-cls/keras-cls.component.scss
+++ b/src/app/pages/keras-cls/keras-cls.component.scss
@@ -1,23 +1,65 @@
-.slide-content {
-    .image-column {
-      display: flex; 
-      justify-content: center;
-      align-items: center;
-  
-      .keras-svg-wrapper {
+.image-column {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .keras-svg-wrapper {
         display: inline-block;
-        height: auto;  
+        height: auto;
         width: auto;
         box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1) !important;
         border-radius: 1rem;
 
         .keras-svg {
-          width: 100%;
-          max-width: 500px;
-          height: auto;
-          display: block;
+            width: 100%;
+            max-width: 500px;
+            height: auto;
+            display: block;
         }
-      }
     }
+}
+
+
+.image-grid_3 {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+    width: 80%;
+    background-color: #fff;
+    padding: 32px;
+    border-radius: 24px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+
+
+    img {
+        // font-family: 'Courier New', Courier, monospace;
+        width: 40%;
+        height: auto;
+        // border-radius: 24px;
+        object-fit: cover;
+        // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+}
+
+.image-compare-wrapper-wrapper {
+    display: flex   ;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.image-compare-wrapper {
+    background-color: #fff;
+    padding: 32px;
+        height: 312px  ;
+        width: 312px  ;
+        border-radius: 24px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+
+     img {
+       height: 248px;
+      width: 248px;
+     }
   }
-  
+
